==================================
Rilascio 1.70.06    del 13/07/2015
==================================

Monad: la funzione di quiver che crea SYSID adegua i contatori di monad se si accorge che il database è stato popolato con un monad più avanti nei progressivi. 
Ciò permette di spostare un database da un sistema a un altro senza il rischio di generare codici duplicati.

ryBox: migliorata la gestione del bottone: a volte catturava il fuoco dopo l'esecuzione del comando.
Questo implicava il riassegnamento dello stato di modifica ai campi appena salvati.

==================================
Rilascio 1.70.05    del 06/07/2015
==================================

Filibuster: aggiunta una socialbox di sistema.

==================================
Rilascio 1.70.04    del 05/07/2015
==================================

Filibuster: aggiustamenti per mobile.

==================================
Rilascio 1.70.03    del 04/07/2015
==================================

Filibuster: utilizzato il meta viewport; sostituito il cambio pagina mediante eventi sweep con bottoni espliciti semitrasparenti.

==================================
Rilascio 1.70.02    del 01/07/2015
==================================

Filibuster - migliorata la gestione delle pagine:
1. ci si può muovere liberamente tra le cartelle con il documento non salvato fino a quando non si va in selezione;
2. aggiunto l'URL per le miniature.

==================================
Rilascio 1.70.01    del 21/06/2015
==================================

Setup Ego: ordinate per descrizione le liste.

Filibuster: corretto il reperimento dei contenuti da Wikipedia.

Filibuster: aggiunto il titolo al marquee.

==================================
Rilascio 1.70.00    del 08/06/2015
==================================

Implementata la versione Javascript dell'Algoritmo Zero.

==================================
Rilascio 1.69.32    del 31/05/2015
==================================
