@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=EmulateIE9, chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Algoritmo Zero</title>
+	<title>Algoritmo di gauge</title>
 </head>
 
 <style>
@@ -93,7 +93,7 @@ function ricerca(){
             "reqid":reqid
         };
     }
-    $.post("ryzero.php", params, 
+    $.post("rygauge.php", params, 
         function(d){
             try{
                 var v=$.parseJSON(d);
@@ -133,10 +133,10 @@ function ricerca(){
 </script>
 
 <body onload="init()" spellcheck="false" style="font-family:sans-serif;font-size:100%;text-align:justify;">
-<span style="font-size:18px;">Demo Algoritmo Zero</span>
+<span style="font-size:18px;">Demo "Algoritmo di gauge"</span>
 <br>
 <br>
-Il componente che implementa l'algoritmo zero &egrave; in grado di ovviare al 
+Il componente che implementa l'algoritmo di gauge &egrave; in grado di ovviare al 
 "Subset sum problem" (problema delle somme parziali), 
 classificato come NP-completo: dato un insieme numerico con migliaia 
 di elementi, esso &egrave; in grado di trovare sottoinsiemi di somma 
